--- a/Source/pages/myorder/myorder.wxml
+++ b/Source/pages/myorder/myorder.wxml
@@ -7,8 +7,8 @@
 <view class='top margin-bottom-20' wx:for='{{orderlist}}' wx:key='k' hidden='{{s1!=1}}'>
   <!-- <view class='head'></view> -->
   <view class='flex-row flex-center padding-10 '>
-    <view class='h6 padding-left-20'>2018-10-25</view>
-    <view class='h6 margin-left-10'>15:00:16</view>
+    <view class='h6 padding-left-20'>{{item.updated_date}}</view>
+    <view class='h6 margin-left-10'></view>
     <view class='flex-1 text-right h6 txt-primary padding-right-20'>待交易</view>
   </view>
 
@@ -37,8 +37,7 @@
 <view class='top margin-bottom-20' wx:for='{{orderlistB}}' wx:key='k' hidden='{{s2!=2}}'>
   <!-- <view class='head'></view> -->
   <view class='flex-row flex-center padding-10 '>
-    <view class='h6 padding-left-20'>2018-10-25</view>
-    <view class='h6 margin-left-10'>15:00:16</view>
+    <view class='h6 padding-left-20'>{{item.updated_date}}</view>
     <view class='flex-1 text-right h6 txt-primary padding-right-20'>交易成功</view>
   </view>
 
@@ -67,8 +66,7 @@
 <view class='top margin-bottom-20' wx:for='{{orderlistC}}' wx:key='k' hidden='{{s3!=3}}'>
   <!-- <view class='head'></view> -->
   <view class='flex-row flex-center padding-10 '>
-    <view class='h6 padding-left-20'>2018-10-25</view>
-    <view class='h6 margin-left-10'>15:00:16</view>
+    <view class='h6 padding-left-20'>{{item.updated_date}}</view>
     <view class='flex-1 text-right h6 txt-primary padding-right-20'>交易已取消</view>
   </view>
 
