--- a/Source/pages/myorder/myorder.wxml
+++ b/Source/pages/myorder/myorder.wxml
@@ -7,7 +7,7 @@
 <view class='top margin-bottom-20' wx:for='{{orderlist}}' wx:key='k' hidden='{{s1!=1}}'>
   <!-- <view class='head'></view> -->
   <view class='flex-row flex-center padding-10 '>
-    <view class='h6 padding-left-20'>{{item.updated_date}}</view>
+    <view class='h6 padding-left-20'>{{item.orderdate_formatting}}</view>
     <view class='h6 margin-left-10'></view>
     <view class='flex-1 text-right h6 txt-primary padding-right-20'>待交易</view>
   </view>
@@ -17,13 +17,19 @@
       <view class='icon-60 flex-row flex-column ' style='border:1rpx solid #ececec'>
         <image mode="aspectFit" class='icon-50 padding-top-10' src='{{uploadpath}}resource/{{res.shouji}}'></image>
       </view>
+
       <view class='flex-row column padding-left-30'>
         <view class='h5 txt-black flex-1 padding-10'>{{item.brand_model_name}}</view>
+        
         <view class='flex-1 h7 bg-primary padding-5 txt-white margin-left-10' style='width:80rpx;border-radius:5rpx;'>{{item.transactionmode}}</view>
+
         <view class='flex-1 h7 bg-primary padding-5 txt-white margin-left-10' hidden='true' style='width:80rpx;border-radius:5rpx;'>邮寄回收</view>
+
         <view class='flex-1 h7 bg-primary padding-5 txt-white margin-left-10' hidden='true' style='width:80rpx;border-radius:5rpx;'>地铁取货</view>
+
         <view class='flex-1 h6 padding-10'>￥{{item.price}}</view>
       </view>
+
     </view>
   </navigator>
 
@@ -37,7 +43,7 @@
 <view class='top margin-bottom-20' wx:for='{{orderlistB}}' wx:key='k' hidden='{{s2!=2}}'>
   <!-- <view class='head'></view> -->
   <view class='flex-row flex-center padding-10 '>
-    <view class='h6 padding-left-20'>{{item.updated_date}}</view>
+    <view class='h6 padding-left-20'>{{item.orderdate_formatting}}</view>
     <view class='flex-1 text-right h6 txt-primary padding-right-20'>交易成功</view>
   </view>
 
@@ -66,7 +72,7 @@
 <view class='top margin-bottom-20' wx:for='{{orderlistC}}' wx:key='k' hidden='{{s3!=3}}'>
   <!-- <view class='head'></view> -->
   <view class='flex-row flex-center padding-10 '>
-    <view class='h6 padding-left-20'>{{item.updated_date}}</view>
+    <view class='h6 padding-left-20'>{{item.orderdate_formatting}}</view>
     <view class='flex-1 text-right h6 txt-primary padding-right-20'>交易已取消</view>
   </view>
 
