--- a/Source/pages/orderdetails/orderdetails.wxml
+++ b/Source/pages/orderdetails/orderdetails.wxml
@@ -1,5 +1,6 @@
 <!--pages/orderdetails/orderdetails.wxml-->
 
+
 <view class='' hidden='{{orderinfo.status!="C"}}'>
   <view class='bg-white margin-top-20 flex-row flex-column padding-40'>
     <view>
@@ -16,16 +17,19 @@
           <image mode="aspectFit" class='icon-50 padding-top-10' src='{{uploadpath}}resource/{{res.shouji}}'></image>
         </view>
         <view class='flex-row column padding-left-30'>
-          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.order_brand}}{{orderinfo.order_model}}</view>
-
-          <view class='flex-1 h6 txt-primary padding-10'>查看详情</view>
+          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
         </view>
       </view>
     </view>
 
-    <view class='flex-row flex-center padding-30'>
+    <view class='flex-row flex-center padding-30' style='border-bottom:1rpx solid #ececec'>
       <view class='flex-4 txt-black h5'>预估回收价</view>
       <view class='flex-1 txt-red'>￥{{orderinfo.price}}</view>
+    </view>
+    <view class='flex-row flex-center padding-30'>
+      <view class='flex-4 txt-black h5'>最终回收价</view>
+      <view class='flex-1 txt-primary'>￥{{orderinfo.finallyprice}}</view>
     </view>
 
   </view>
@@ -50,7 +54,7 @@
 
   <view class='border_t padding-20 flex-row bg-white'>
     <view class='flex-5'></view>
-    <navigator url='/pages/problem/problem' class='flex-1 h6 again margin-right-40 padding-10 text-center'>重新询价</navigator>
+    <navigator url='/pages/problem/problem?id={{391}}' class='flex-1 h6 again margin-right-40 padding-10 text-center'>重新询价</navigator>
 
   </view>
 </view>
@@ -71,16 +75,21 @@
           <image mode="aspectFit" class='icon-50 padding-top-10' src='{{uploadpath}}resource/{{res.shouji}}'></image>
         </view>
         <view class='flex-row column padding-left-30'>
-          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.order_brand}}{{orderinfo.order_model}}</view>
+          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
 
-          <view class='flex-1 h6 txt-primary padding-10'>查看详情</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
         </view>
       </view>
     </view>
 
-    <view class='flex-row flex-center padding-30'>
+
+    <view class='flex-row flex-center padding-30' style='border-bottom:1rpx solid #ececec'>
       <view class='flex-4 txt-black h5'>预估回收价</view>
       <view class='flex-1 txt-red'>￥{{orderinfo.price}}</view>
+    </view>
+    <view class='flex-row flex-center padding-30'>
+      <view class='flex-4 txt-black h5'>最终回收价</view>
+      <view class='flex-1 txt-primary'>￥{{orderinfo.finallyprice}}</view>
     </view>
 
   </view>
@@ -105,7 +114,7 @@
 
   <view class='border_t padding-20 flex-row bg-white'>
     <view class='flex-5'></view>
-    <navigator url='/pages/problem/problem' class='flex-1 h6 again margin-right-40 padding-10 text-center'>重新询价</navigator>
+    <navigator url='/pages/problem/problem?id={{391}}' class='flex-1 h6 again margin-right-40 padding-10 text-center'>重新询价</navigator>
   </view>
 </view>
 
@@ -141,15 +150,20 @@
           <image mode="aspectFit" class='icon-50 padding-top-10' src='{{uploadpath}}resource/{{res.shouji}}'></image>
         </view>
         <view class='flex-row column padding-left-30'>
-          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.order_brand}}{{orderinfo.order_model}}</view>
-          <view class='flex-1 h6 txt-primary padding-10'>查看详情</view>
+          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
         </view>
       </view>
     </view>
 
-    <view class='flex-row flex-center padding-30'>
+    <view class='flex-row flex-center padding-30' style='border-bottom:1rpx solid #ececec'>
       <view class='flex-4 txt-black h5'>预估回收价</view>
       <view class='flex-1 txt-red'>￥{{orderinfo.price}}</view>
+    </view>
+    
+    <view class='flex-row flex-center padding-30'>
+      <view class='flex-4 txt-black h5'>最终回收价</view>
+      <view class='flex-1 txt-primary h6 padding-left-20'>等待报价...</view>
     </view>
 
   </view>
@@ -193,6 +207,125 @@
 
   <view class='border_t padding-20 flex-row bg-white'>
     <view class='flex-5'></view>
-    <navigator url='' class='flex-1 h6 again margin-right-40 padding-10 text-center'>取消订单</navigator>
+    <view  class='flex-1 h6 again margin-right-40 padding-10 text-center' bindtap='cancleorder'>取消订单</view>
   </view>
+</view>
+
+<view class='' hidden='{{orderinfo.status!="W"}}'>
+  <view class='bg-white margin-top-20 flex-row flex-column padding-40'>
+  <view>
+    <image class='icon-40' src='{{uploadpath}}resource/{{res.wait}}'></image>
+  </view>
+  <view class='txt-black txt-bold margin-top-10'>等待确认</view>
+ </view>
+
+  <view class='bg-white margin-top-20'>
+    <view class='txt-bold txt-black h5 padding-40' style='border-bottom:1rpx solid #ececec'>联系信息</view>
+    <view class='flex-row column padding-30 bg-white margin-top-10'>
+    <view class='flex-row flex-center margin-bottom-10'>
+      <view class='h5'>联系电话：</view>
+      <view class='h5'>{{orderinfo.mobile}}</view>
+    </view>
+
+    <view class='flex-row flex-center margin-bottom-10'>
+      <view class='h5'>联系地址：</view>
+      <view class='h5'>{{orderinfo.city}}{{orderinfo.address}}</view>
+    </view>
+
+  </view>
+  </view>
+
+  <view class='bg-white margin-top-20'>
+    <view class='txt-bold txt-black h5 padding-40' style='border-bottom:1rpx solid #ececec'>商品信息</view>
+    <view class='padding-20 border_b'>
+      <view class=' padding-left-10 flex-row flex-center'>
+        <view class='icon-60 flex-row flex-column ' style='border:1rpx solid #ececec'>
+          <image mode="aspectFit" class='icon-50 padding-top-10' src='{{uploadpath}}resource/{{res.shouji}}'></image>
+        </view>
+        <view class='flex-row column padding-left-30'>
+          <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
+        </view>
+      </view>
+    </view>
+
+    <view class='flex-row flex-center padding-30' style='border-bottom:1rpx solid #ececec'>
+      <view class='flex-4 txt-black h5'>预估回收价</view>
+      <view class='flex-1 txt-red'>￥{{orderinfo.price}}</view>
+    </view>
+    <view class='flex-row flex-center padding-30'>
+      <view class='flex-4 txt-black h5'>最终回收价</view>
+      <view class='flex-1 txt-primary'>￥{{orderinfo.finallyprice}}</view>
+    </view>
+
+  </view>
+
+  <view class='bg-white margin-top-20'>
+    <view class='txt-bold txt-black h5 padding-40' >注意事项</view>
+    <view class='flex-row flex-center padding-20'>
+
+    <view class='flex-1 flex-row flex-column margin-20 padding-20 ' style='border:4rpx solid #ececec'>
+    <view><image class='icon-40 margin-top-20' src='{{uploadpath}}resource/{{res.iCloud}}'></image></view>
+    <view class='h5 margin-top-20'>手机账号注销</view>
+    <view class='h6 margin-top-20 margin-bottom-20' style=''>请解除手机账号后回收以防止影响回收价格。</view>
+    </view>
+
+    <view class='flex-1 flex-row flex-column margin-20 padding-20 ' style='border:4rpx solid #ececec'>
+    <view><image class='icon-40 margin-top-20' src='{{uploadpath}}resource/{{res.zhengjian}}'></image></view>
+    <view class='h5 margin-top-20'>携带有效证件</view>
+    <view class='h6 margin-top-20 margin-bottom-20' style=''>现场交易需出示身份证，满十八周岁方可交易。</view>
+    </view>
+
+    </view>
+  </view>
+
+  <view class='flex-row column padding-30 bg-white margin-top-20'>
+    <view class='flex-row flex-center margin-bottom-20'>
+      <view class='h5'>订单编号：</view>
+      <view class='h5 txt-black'>2018102545719015003</view>
+    </view>
+
+    <view class='flex-row flex-center margin-bottom-20'>
+      <view class='h5'>创建时间：</view>
+      <view class='h5 txt-black'>{{orderinfo.orderdate_formatting}}</view>
+    </view>
+
+    <view class='flex-row flex-center margin-bottom-20'>
+      <view class='h5'>收款方式：</view>
+      <view class='h5 txt-black'>微信</view>
+    </view>
+
+  </view>
+
+  <view class='border_t padding-20 flex-row bg-white'>
+    <view class='flex-4'></view>
+    <navigator bindtap='bindsuccess' class='flex-1 h6 again margin-right-40 padding-10 text-center'>确认交易</navigator>
+    <navigator bindtap='cancleorder' class='flex-1 h6 again margin-right-40 padding-10 text-center'>拒绝报价</navigator>
+  </view>
+</view>
+
+<view class='' hidden='{{open!=1}}'>
+<view class='bg' style='height:100%'>
+<view class='' style=''></view>
+</view>
+
+<view class='under' >
+<view class='padding-20 txt-primary  topclose' bindtap='bindclosedetails' style='border-bottom:1rpx solid #ececec'>关闭</view>
+<scroll-view scroll-y='true' class='margin-top-80 ' >
+<view class=' flex-row flex-center'>
+<view class='flex-1 padding-20 h5 txt-gray'>试图</view>
+<view class='flex-1 padding-20  text-right h5 txt-black'>内容</view>
+</view>
+<view class=' flex-row flex-center'>
+<view class='flex-1 padding-20 h5 txt-gray'>试图</view>
+<view class='flex-1 padding-20  text-right h5 txt-black'>内容</view>
+</view>
+<view class=' flex-row flex-center'>
+<view class='flex-1 padding-20 h5 txt-gray'>试图</view>
+<view class='flex-1 padding-20  text-right h5 txt-black'>内容</view>
+</view>
+
+</scroll-view>
+</view>
+
 </view>
