--- a/Source/pages/orderdetails/orderdetails.wxss
+++ b/Source/pages/orderdetails/orderdetails.wxss
@@ -17,3 +17,25 @@ Page{
   border:1rpx solid #dfdede;
   border-radius: 5rpx;
 }
+.bg{
+  background: rgb(8, 8, 8);
+  opacity: 0.5;
+  position: fixed;
+  bottom:0px;
+  z-index: 1;
+  width: 100%;
+}
+.under{
+  position: fixed;
+  z-index:2;
+  width: 100%;
+  background: white;
+  height: 65%;
+  bottom: 0px;
+}
+.topclose{
+  position: fixed;
+  background: white;
+  z-index: 1;
+  width: 100%;
+}
