--- a/Source/pages/orderdetails/orderdetails.wxml
+++ b/Source/pages/orderdetails/orderdetails.wxml
@@ -59,7 +59,7 @@
   </view>
 </view>
 
-<view class='' hidden='{{orderinfo.status!="B"}}'>
+<view class='' hidden='{{orderinfo.status!="S"}}'>
   <view class='bg-white margin-top-20 flex-row flex-column padding-40'>
   <view>
     <image class='icon-40' src='{{uploadpath}}resource/{{res.jiaoyichenggong}}'></image>
@@ -300,6 +300,7 @@
   <view class='border_t padding-20 flex-row bg-white'>
     <view class='flex-4'></view>
     <navigator bindtap='bindsuccess' class='flex-1 h6 again margin-right-40 padding-10 text-center'>确认交易</navigator>
+
     <navigator bindtap='cancleorder' class='flex-1 h6 again margin-right-40 padding-10 text-center'>拒绝报价</navigator>
   </view>
 </view>
