--- a/Source/app.wxss
+++ b/Source/app.wxss
@@ -336,6 +336,9 @@ button[disabled][type=primary] {
 .margin-bottom-20{
   margin-bottom:20rpx;
 }
+.margin-bottom-40{
+  margin-bottom:40rpx;
+}
 .height-40{
   height: 40rpx;
 }
@@ -405,6 +408,9 @@ button[disabled][type=primary] {
 }
 .radius-50{
   border-radius: 50%;
+}
+.radius-5{
+  border-radius: 5%;
 }
 .icon-10{
   width: 20rpx;
