--- a/Source/pages/aboutus/aboutus.wxml
+++ b/Source/pages/aboutus/aboutus.wxml
@@ -3,23 +3,23 @@
 <image class='' style='width:100%;height:350rpx;' src='{{uploadpath}}resource/{{res.aboutus_img}}'></image>
 </view>
 
-<view class='margin-40 bg-white border-radius' >
-<view class='text-center txt-primary padding-30 h4' style='border-bottom:1rpx dashed #e5e4e7'>关于我们</view>
+<view class='margin-10 bg-white border-radius' >
+<view class='text-center txt-primary padding-20 ' style='border-bottom:1rpx dashed #e5e4e7'>公司宗旨</view>
 <view wx:for='{{aboutus}}' hidden='{{item.status!="A"}}' wx:key='k' class='margin-20 padding-10' >
 <view class='h5'>{{item.aboutuscontent}}</view>
 </view>
 </view>
 
-<view class='margin-40 bg-white border-radius' >
-<view class='txt-primary padding-30 h5' style='border-bottom:1rpx dashed #e5e4e7'></view>
+<view class='margin-10 bg-white border-radius' >
+<view class='text-center txt-primary padding-20 ' style='border-bottom:1rpx dashed #e5e4e7'>业务范围</view>
 <view wx:for='{{aboutus}}' hidden='{{item.status!="B"}}' wx:key='k' class='margin-20 padding-10' >
 <view class='txt-primary'>{{item.title}}</view>
 <view class='h5'>{{item.aboutuscontent}}</view>
 </view>
 </view>
 
-<view class='margin-40 bg-white border-radius' >
-<view class='txt-primary padding-30 h5' style='border-bottom:1rpx dashed #e5e4e7'></view>
+<view class='margin-10 bg-white border-radius' >
+<view class='text-center txt-primary padding-20 ' style='border-bottom:1rpx dashed #e5e4e7'>企业理念</view>
 <view wx:for='{{aboutus}}' hidden='{{item.status!="C"}}' wx:key='k' class='margin-20 padding-10' >
 <view class='h5'>{{item.aboutuscontent}}</view>
 </view>
