--- a/Source/pages/mine/mine.wxss
+++ b/Source/pages/mine/mine.wxss
@@ -1,4 +1,21 @@
 /* pages/mine/mine.wxss */
+
 .border_bottom{
   border-bottom: 1rpx solid #e2e2e2;
 }
+.bg{
+  background: rgb(8, 8, 8);
+  opacity: 0.5;
+  position: fixed;
+  bottom:0px;
+  z-index: 1;
+  width: 100%;
+}
+.under{
+  position: fixed;
+  z-index:2;
+  width: 100%;
+  background: white;
+  height: 30%;
+  bottom: 0px;
+} 
