--- a/Source/pages/mine/mine.wxml
+++ b/Source/pages/mine/mine.wxml
@@ -35,7 +35,7 @@
     <image class='icon-15' src='{{uploadpath}}resource/{{res.right_icon}}'></image>
   </navigator>
 
-  <navigator bindtap='btnopendetails' class='flex-row flex-center padding-40 border_bottom'>
+  <navigator bindtap='contactkefu' class='flex-row flex-center padding-40 border_bottom'>
     <image class='icon-30' src='{{uploadpath}}resource/{{res.CCS_icon}}'></image>
     <view class='flex-1 h4-5 padding-left-20'>联系客服</view>
     <image class='icon-15' src='{{uploadpath}}resource/{{res.right_icon}}'></image>
