--- a/Source/pages/orderdetails/orderdetails.wxml
+++ b/Source/pages/orderdetails/orderdetails.wxml
@@ -18,7 +18,9 @@
         </view>
         <view class='flex-row column padding-left-30'>
           <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
-          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>
+          <text class='h6 txt-gray'>{{orderinfo.anwserline}}</text>
+          </view>
         </view>
       </view>
     </view>
@@ -77,7 +79,7 @@
         <view class='flex-row column padding-left-30'>
           <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
 
-          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'><text class='h6 txt-gray'>{{orderinfo.anwserline}}</text></view>
         </view>
       </view>
     </view>
@@ -151,7 +153,7 @@
         </view>
         <view class='flex-row column padding-left-30'>
           <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
-          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'><text class='h6 txt-gray'>{{orderinfo.anwserline}}</text></view>
         </view>
       </view>
     </view>
@@ -258,7 +260,7 @@
         </view>
         <view class='flex-row column padding-left-30'>
           <view class='h5 txt-black flex-1 padding-10'>{{orderinfo.brand_model_name}}</view>
-          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'>查看详情</view>
+          <view class='flex-1 h6 txt-primary padding-10' bindtap='btnopendetails'><text class='h6 txt-gray'>{{orderinfo.anwserline}}</text></view>
         </view>
       </view>
     </view>
